portfolio view page

--- a/home/static/css/programmer.css
+++ b/home/static/css/programmer.css
@@ -14,6 +14,7 @@
 .p-btn-cnt {
     display: flex;
     justify-content: center;
+
     a {
         margin-top: 20px;
         text-decoration: none;
@@ -29,75 +30,150 @@
     }
 }
 
-.form_content {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/*.form_content {*/
+/*    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;*/
+/*    padding: 0;*/
+
+/*}*/
+
+/*h1, p {*/
+/*    text-align: center;*/
+/*    margin-top: 20px;*/
+/*}*/
+
+/*form {*/
+/*    margin-left: 40%;*/
+/*}*/
+
+/*form p {*/
+/*    width: 100%;*/
+/*    overflow: auto;*/
+/*}*/
+
+/*label {*/
+/*    float: left;*/
+/*    clear: both;*/
+/*    color: #333;*/
+/*    margin-bottom: 4px;*/
+/*}*/
+
+/*input, textarea {*/
+/*    clear: both;*/
+/*    width: 300px;*/
+/*    float: left;*/
+/*    margin: 0 0 10px;*/
+/*    background-color: #46394B60;*/
+/*    border: 0;*/
+/*    padding: 6px 10px;*/
+/*    font-size: 14px;*/
+/*    border-radius: 5px;*/
+/*}*/
+
+/*input[type=submit], a.button {*/
+/*    background: #ffc600;*/
+/*    color: black;*/
+/*    font-size: 17px;*/
+/*    text-transform: uppercase;*/
+/*    border-radius: 5px;*/
+/*    transition: background-color 0.2s, color 0.2s;*/
+/*}*/
+
+/*input[type=submit]:hover, a.button:hover {*/
+/*    color: white;*/
+/*    background-color: #46394B;*/
+/*}*/
+
+
+/*.errorlist {*/
+/*    color: #cc0033;*/
+/*    float: left;*/
+/*    clear: both;*/
+/*    padding-left: 10px;*/
+/*}*/
+
+/*.helptext {*/
+/*    margin: 0 0 20px 0;*/
+/*    color: #aaa;*/
+/*    clear: both;*/
+/*    float: left;*/
+/*    font-size: 13px;*/
+/*}*/
+
+/*#id_github {*/
+/*    width: 300px;*/
+/*}*/
+
+
+.portfolio {
     padding: 0;
+    margin: 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
 
-    h1, p {
-        text-align: center;
+
+    .info-container {
+        background: white;
+        margin: 50px 0;
+        width: 80%;
+        height: auto;
+        padding: 50px;
+        border-radius: 20px;
+        box-shadow: 0 0 19px -3px rgba(0, 0, 0, 0.5);
+    }
+
+    .info-description {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .image-container {
+        width: 300px;
+        height: 300px;
+        position: relative;
+        overflow: hidden;
+        border-radius: 5%;
         margin-top: 20px;
+        margin-left: 20px;
     }
 
-    form {
-        margin-left: 40%;
-    }
-
-    form p {
+    img {
         width: 100%;
-        overflow: auto;
+        height: 100%;
+        object-fit: cover;
     }
 
-    label {
-        float: left;
-        clear: both;
-        color: #333;
-        margin-bottom: 4px;
+    .description-container {
+        max-width: 50%;
     }
 
-    input, textarea {
-        clear: both;
-        width: 300px;
-        float: left;
-        margin: 0 0 10px;
-        background-color: #46394B60;
-        border: 0;
-        padding: 6px 10px;
-        font-size: 14px;
-        border-radius: 5px;
+    .info a {
+        color: orange;
     }
 
-    input[type=submit], a.button {
-        background: #ffc600;
-        color: black;
-        font-size: 17px;
-        text-transform: uppercase;
-        border-radius: 5px;
-        transition: background-color 0.2s, color 0.2s;
+    h3 {
+        margin-top: 15px;
     }
 
-    input[type=submit]:hover, a.button:hover {
-        color: white;
-        background-color: #46394B;
+    .info {
+        margin-left: 5px;
     }
 
+    .edit-btn {
+        margin-top: 50px;
+        margin-left: 10px;
 
-    .errorlist {
-        color: #cc0033;
-        float: left;
-        clear: both;
-        padding-left: 10px;
+        a {
+            color: #46394B;
+            border-radius: 5px;
+            font-size: 21px;
+            text-decoration: None;
+            text-transform: uppercase;
+            padding: 10px 20px;
+            transition: 0.3s;
+            box-shadow: 0 5px 10px rgba(70, 57, 75, 0.7);
+        }
     }
 
-    .helptext {
-        margin: 0 0 20px 0;
-        color: #aaa;
-        clear: both;
-        float: left;
-        font-size: 13px;
-    }
-
-    #id_github {
-        width: 300px;
-    }
 }
 
