--- a/templates/programmer/portfolio_view.html
+++ b/templates/programmer/portfolio_view.html
@@ -32,8 +32,10 @@
                     </div>
 
                 </div>
-                <div class="image-container">
-                    <img src="{{ portfolio.image.url }}" alt="photo">
+                <div class="outer-img-cnt">
+                    <div class="image-container">
+                        <img src="{{ portfolio.image.url }}" alt="photo">
+                    </div>
                 </div>
             </div>
         </div>
