added models Order, Bid, Comment

--- a/templates/customer/home.html
+++ b/templates/customer/home.html
@@ -3,7 +3,7 @@
 {% block title %}Главная{% endblock %}
 
 {% block menu %}
-    {% include 'programmer/menu.html' %}
+    {% include 'customer/menu.html' %}
 {% endblock %}
 
 {% block content %}
