--- a/templates/customer/menu.html
+++ b/templates/customer/menu.html
@@ -1,5 +1,5 @@
-<a href="">Программисты</a>
-<a href="">Оформить заказы</a>
-<a href="">Мои заказы</a>
+<a href="{% url 'customer:programmers_list' %}">Программисты</a>
+<a href="{% url 'customer:order_create' %}">Оформить заказы</a>
+<a href="{% url 'customer:orders_list' %}">Мои заказы</a>
 <a href="">Новости</a>
 <a href="">Контакты</a>
