--- a/templates/programmer/portfolio_view.html
+++ b/templates/programmer/portfolio_view.html
@@ -14,7 +14,7 @@
             <div class="info-description">
                 <div class="description-container">
                     <h3>Фамилия Имя:</h3>
-                    <p class="info">{{ user.last_name }} {{ user.first_name }}</p>
+                    <p class="info">{{ portfolio.user.last_name }} {{ portfolio.user.first_name }}</p>
                     <h3>Github:</h3>
                     <p class="info">
                         <a href="{{ portfolio.github }}" target="_blank">{{ portfolio.github }}</a>
