--- a/templates/programmer/portfolio_create.html
+++ b/templates/programmer/portfolio_create.html
@@ -4,19 +4,70 @@
     {% include 'programmer/menu.html' %}
 {% endblock %}
 {% block content %}
-    <div class="top-header-content">
-        <div class="form_content">
-            {% if not has_portfolio %}
-                <h1>Создание Портфолио</h1>
-                <form method="post" enctype="multipart/form-data">
-                    {{ form.as_p }}
-                    {% csrf_token %}
-                    <p><input type="submit" value="Create"></p>
-                </form>
+        <h2>Создание Портфолио</h2>
+        <div class="create-portfolio-cnt">
+            <form method="post" enctype="multipart/form-data">
+                <div class="flex-column">
+                    <label for="{{ form.image.id_for_label }}">{{ form.image.label }}</label>
+                </div>
+                <div class="inputForm">
+                    {{ form.image }}
+                    {% if form.image.errors %}
+                        <div class="error">{{ form.image.errors }}</div>
+                    {% endif %}
+                </div>
 
-            {% else %}
-                <h1>У вас уже есть Портфолио</h1>
-            {% endif %}
+                <div class="flex-column">
+                    <label for="{{ form.github.id_for_label }}">{{ form.github.label }}</label>
+                </div>
+                <div class="inputForm">
+                    {{ form.github }}
+                    {% if form.github.errors %}
+                        <div class="error">{{ form.github.errors }}</div>
+                    {% endif %}
+                </div>
+
+                <div class="flex-column">
+                    <label for="{{ form.introduction.id_for_label }}">{{ form.introduction.label }}</label>
+                </div>
+                <div class="inputFormTextarea">
+                    {{ form.introduction }}
+                    {% if form.introduction.errors %}
+                        <div class="error">{{ form.introduction.errors }}</div>
+                    {% endif %}
+                </div>
+
+                <div class="flex-column">
+                    <label for="{{ form.education_or_courses.id_for_label }}">{{ form.education_or_courses.label }}</label>
+                </div>
+                <div class="inputFormTextarea">
+                    {{ form.education_or_courses }}
+                    {% if form.education_or_courses.errors %}
+                        <div class="error">{{ form.education_or_courses.errors }}</div>
+                    {% endif %}
+                </div>
+
+                <div class="flex-column">
+                    <label for="{{ form.qualities.id_for_label }}">{{ form.qualities.label }}</label>
+                </div>
+                <div class="inputFormTextarea">
+                    {{ form.qualities }}
+                    {% if form.qualities.errors %}
+                        <div class="error">{{ form.qualities.errors }}</div>
+                    {% endif %}
+                </div>
+
+                <div class="flex-column">
+                    <label for="{{ form.skills.id_for_label }}">{{ form.skills.label }}</label>
+                </div>
+                <div class="inputFormTextarea">
+                    {{ form.skills }}
+                    {% if form.skills.errors %}
+                        <div class="error">{{ form.skills.errors }}</div>
+                    {% endif %}
+                </div>
+                {% csrf_token %}
+                <button type="submit" class="button-create-portfolio">Создать портфолио</button>
+            </form>
         </div>
-    </div>
 {% endblock %}
