dry principle for portfolio

--- a/templates/programmer/portfolio_view.html
+++ b/templates/programmer/portfolio_view.html
@@ -12,24 +12,10 @@
         <div class="info-container">
             <div class="info-description">
                 <div class="description-container">
-                    <h3>Фамилия Имя:</h3>
-                    <p class="info">{{ portfolio.user.last_name }} {{ portfolio.user.first_name }}</p>
-                    <h3>Github:</h3>
-                    <p class="info">
-                        <a href="{{ portfolio.github }}" target="_blank">{{ portfolio.github }}</a>
-                    </p>
-                    <h3>О себе:</h3>
-                    <p class="info">{{ portfolio.introduction }}</p>
-                    <h3>Образование/Курсы:</h3>
-                    <p class="info">{{ portfolio.education_or_courses }}</p>
-                    <h3>Качества:</h3>
-                    <p class="info">{{ portfolio.qualities }}</p>
-                    <h3>Навыки:</h3>
-                    <p class="info">{{ portfolio.skills }}</p>
+                    {% include 'portfolio_info.html' %}
                     <div class="edit-btn">
                         <a href="{% url 'programmer:portfolio_edit' %}">Редактировать Портфолио</a>
                     </div>
-
                 </div>
                 <div class="outer-img-cnt">
                     <div class="image-container">
@@ -39,5 +25,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
