added styles to order list, getting access by order_id

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/programmer.css' %}">
+    <link rel="stylesheet" href="{% static 'css/customer.css' %}">
     <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     <link rel="icon" href="{% static 'image/favicon/favicon.png' %}">
     <title>{% block title %}{% endblock %}</title>
