--- a/templates/customer/orders_list.html
+++ b/templates/customer/orders_list.html
@@ -16,6 +16,7 @@
                         <div class="title">{{ order.title }}</div>
                         <div class="category">{{ order.get_category_display }}</div>
                         <div class="created">{{ order.created }}</div>
+                        <div class="full-description">{{ order.full_description }}</div>
                     </div>
                     <div class="right">
                         {% if order.price %}
