--- a/templates/programmer/menu.html
+++ b/templates/programmer/menu.html
@@ -1,5 +1,5 @@
 <a href="{% url 'programmer:portfolio_view' %}">Портфолио</a>
 <a href="{% url 'programmer:order_list' %}">Заказы</a>
-<a href="">Мои заказы</a>
+<a href="{% url 'programmer:my_orders' %}">Мои заказы</a>
 <a href="">Новости</a>
 <a href="">Контакты</a>
