--- a/templates/customer/order_detail.html
+++ b/templates/customer/order_detail.html
@@ -7,14 +7,24 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Детали заказа</h1>
+    <h2>Детали заказа</h2>
     <div class="order-detail-cnt">
         <div class="order-full-info">
             <div class="left">
                 <div class="title">{{ order.title }}</div>
                 <div class="category">{{ order.get_category_display }}</div>
                 <div class="created">{{ order.created }}</div>
-                <div class="full-description">{{ order.full_description }}</div>
+                <div class="full-description-all-lines">{{ order.full_description }}</div>
+                <div class="buttons">
+                    <form action="{% url 'customer:order_edit' order.id %}">
+                        <button type="submit" class="edit-order-button">Редактировать</button>
+                    </form>
+
+                    <form action="{% url 'customer:order_delete' order.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="delete-order-button">Удалить</button>
+                    </form>
+                </div>
             </div>
             <div class="right">
                 {% if order.price %}
@@ -26,35 +36,44 @@
                     <div class="deadline">Выполнить до: {{ order.deadline }}</div>
                 {% endif %}
                 {% if order.programmer %}
-                    <div class="programmer">{{ order.programmer }}</div>
+                    <div class="programmer">Выполняет: {{ order.programmer.first_name }} {{ order.programmer.last_name }}</div>
                 {% endif %}
                 {% if order.taken %}
                     <div class="taken">{{ order.taken }}</div>
                 {% endif %}
             </div>
         </div>
-        <form action="{% url 'customer:order_edit' order.id %}">
-            <button type="submit">Редактировать</button>
-        </form>
-
-        <form action="{% url 'customer:order_delete' order.id %}" method="post">
-            {% csrf_token %}
-            <button type="submit">Удалить</button>
-        </form>
-
-
-        {% if bids %}
-            <div class="bids">
-                <h3>Заявки:</h3>
-            </div>
-        {% endif %}
-        {% if comments %}
-            <div class="comments">
-                <h3>Комментарии:</h3>
-            </div>
-        {% endif %}
-        {% if not bids and not comments %}
-            <p class="info-p">Нет ни одной заявки на выполнение...</p>
-        {% endif %}
     </div>
+    {% if bids %}
+        <div class="bids">
+            <h3>Заявки:</h3>
+            {% for bid in bids %}
+                <div class="bid-cnt">
+                    <div class="bid-cnt-inner">
+                        <div class="left-part">
+                            <a href="{% url 'customer:programmer_portfolio' bid.programmer %}">{{ bid.programmer.first_name }} {{ bid.programmer.last_name }}</a>
+                            <div class="created-at">{{ bid.created_at }}</div>
+                        </div>
+                        <div class="buttons">
+                            <form action="{% url 'customer:order_edit' order.id %}">
+                                <button type="submit" class="accept-button" style="margin: 0">Принять</button>
+                            </form>
+
+                            <form action="{% url 'customer:order_delete' order.id %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class="delete-order-button" style="margin: 0">Отклонить</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    {% elif not order.programmer %}
+        <p class="info-p">Нет ни одной заявки на выполнение...</p>
+    {% endif %}
+    {% if comments %}
+        <div class="comments">
+            <h3>Комментарии:</h3>
+        </div>
+    {% endif %}
 {% endblock %}
